unpackaged/main/default/objects/Case/fields/Mobility_Ads__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Ads__c</fullName>
    <label>Mobility Aids</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autism spectrum disorder</fullName>
            </value>
            <value>
                <fullName>Attention Deficit Hyperactivity Disorder</fullName>
            </value>
            <value>
                <fullName>Physical disability</fullName>
            </value>
            <value>
                <fullName>Diseases and health conditions</fullName>
            </value>
            <value>
                <fullName>Intellectual disability</fullName>
            </value>
            <value>
                <fullName>Psychological and dissociative disorders</fullName>
            </value>
            <value>
                <fullName>Crutches</fullName>
                <isActive>false</isActive>
                <label>Crutches</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Walker</fullName>
                <isActive>false</isActive>
                <label>Walker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>