unpackaged/main/default/objects/Case/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Students</fullName>
            </value>
            <value>
                <fullName>Teachers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>