unpackaged/main/default/objects/Case/fields/Mode_AR__c.field-meta.xml
<CustomField>
    <fullName>Mode_AR__c</fullName>
    <label>Mode AR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>الطلاب</fullName>
            </value>
            <value>
                <fullName>معلمون</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>