unpackaged/main/default/objects/Case/fields/MROResource__c.field-meta.xml
<CustomField>
    <fullName>MROResource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MROResource</label>
    <length>225</length>
    <type>Text</type>
</CustomField>