unpackaged/main/default/objects/Case/fields/My_Cases_Report__c.field-meta.xml
<CustomField>
    <fullName>My_Cases_Report__c</fullName>
    <formula>IF(  OwnerId  = $User.Id , &quot;Yes&quot; , &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Cases Report</label>
    <type>Text</type>
</CustomField>