unpackaged/main/default/objects/Case/fields/Nanny__c.field-meta.xml
<CustomField>
    <fullName>Nanny__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nanny</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SALine_Assigned_Resource__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>SALine_Assigned_Resource__c</referenceTo>
    <relationshipLabel>Cases (Nanny)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>