unpackaged/main/default/objects/Case/fields/Need_Modification__c.field-meta.xml
<CustomField>
    <fullName>Need_Modification__c</fullName>
    <label>Need Modification?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>