unpackaged/main/default/objects/Case/fields/No_of_Attendance__c.field-meta.xml
<CustomField>
    <fullName>No_of_Attendance__c</fullName>
    <label>No of Attendants</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>