unpackaged/main/default/objects/Case/fields/No_of_Disabled_Students__c.field-meta.xml
<CustomField>
    <fullName>No_of_Disabled_Students__c</fullName>
    <label>No. of Disabled Students</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>