unpackaged/main/default/objects/Case/fields/No_Of_Resources__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Resources__c</fullName>
    <label>No Of Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>