unpackaged/main/default/objects/Case/fields/Note_Verification__c.field-meta.xml
<CustomField>
    <fullName>Note_Verification__c</fullName>
    <label>Note Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>