unpackaged/main/default/objects/Case/fields/NotResolvedRemarks__c.field-meta.xml
<CustomField>
    <fullName>NotResolvedRemarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks If Not Resolved</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>