unpackaged/main/default/objects/Case/fields/Number_Of_Closing_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Closing_Days__c</fullName>
    <formula>IF(AND((5 - (CASE(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD(  DATEVALUE(ClosedDate)  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ),
((( DATEVALUE(ClosedDate)  -   DATEVALUE(CreatedDate) ) + 1) &lt; 7)),
((CASE(MOD(  DATEVALUE(ClosedDate)  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD(  DATEVALUE(CreatedDate)  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))),
(((FLOOR((( DATEVALUE(ClosedDate)  -  DATEVALUE(CreatedDate) ) - (CASE(MOD(  DATEVALUE(CreatedDate)  - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
(CASE(MOD(  DATEVALUE(CreatedDate)  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) +
(CASE(MOD(  DATEVALUE(ClosedDate)  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Closing Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>