unpackaged/main/default/objects/Case/fields/OperatingUnit__c.field-meta.xml
<CustomField>
    <fullName>OperatingUnit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operating Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>