unpackaged/main/default/objects/Case/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Org Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>