unpackaged/main/default/objects/Case/fields/Parent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent_Phone__c</fullName>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Phone</label>
    <type>Text</type>
</CustomField>