unpackaged/main/default/objects/Case/fields/Payable__c.field-meta.xml
<CustomField>
    <fullName>Payable__c</fullName>
    <description>HOO and FM can edit</description>
    <label>Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>