unpackaged/main/default/objects/Case/fields/Plate_Number_If_Available__c.field-meta.xml
<CustomField>
    <fullName>Plate_Number_If_Available__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plate Number (If Available)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>