unpackaged/main/default/objects/Case/fields/Preferred_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Start Date</label>
    <type>DateTime</type>
</CustomField>