unpackaged/main/default/objects/Case/fields/Prevention_Action__c.field-meta.xml
<CustomField>
    <fullName>Prevention_Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prevention Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>