unpackaged/main/default/objects/Case/fields/Quality_control_start_time__c.field-meta.xml
<CustomField>
    <fullName>Quality_control_start_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quality control start time</label>
    <type>DateTime</type>
</CustomField>