unpackaged/main/default/objects/Case/fields/Quality_Control_Technician__c.field-meta.xml
<CustomField>
    <fullName>Quality_Control_Technician__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quality Control Technician</label>
    <length>250</length>
    <type>Text</type>
</CustomField>