unpackaged/main/default/objects/Case/fields/Quality_control_Technician_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Quality_control_Technician_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quality control Technician Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>