unpackaged/main/default/objects/Case/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request for the Awareness Sessions</fullName>
            </value>
            <value>
                <fullName>Request for New Bus/Supervisors/Teachers Transfer</fullName>
            </value>
            <value>
                <fullName>Requests for New Trips, Activities and Events</fullName>
            </value>
            <value>
                <fullName>Printing New Card - Student</fullName>
            </value>
            <value>
                <fullName>Printing New Card - Drivers &amp; Transportation Supervisors</fullName>
            </value>
            <value>
                <fullName>Evaluation of Schools/Services</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Service Delivery Environment</fullName>
            </value>
            <value>
                <fullName>Transport Services</fullName>
            </value>
            <value>
                <fullName>Transport service - B2B</fullName>
            </value>
            <value>
                <fullName>Limousine Services</fullName>
            </value>
            <value>
                <fullName>Driving School</fullName>
            </value>
            <value>
                <fullName>Vehicle Inspection Services</fullName>
            </value>
            <value>
                <fullName>Auto Repair Services - B2C</fullName>
            </value>
            <value>
                <fullName>Auto Repair Services - B2B</fullName>
            </value>
            <value>
                <fullName>Human Resources- Inspec</fullName>
            </value>
            <value>
                <fullName>Internal Issue-Inspec</fullName>
            </value>
            <value>
                <fullName>Online and Financial Services-Inspec</fullName>
            </value>
            <value>
                <fullName>Quality and Compliance-Inspec</fullName>
            </value>
            <value>
                <fullName>Request-Inspec</fullName>
            </value>
            <value>
                <fullName>Traffic Violation-Inspec</fullName>
            </value>
            <value>
                <fullName>Human Resources-Driving</fullName>
            </value>
            <value>
                <fullName>Internal Issue-Driving</fullName>
            </value>
            <value>
                <fullName>Online and Financial Services-Driving</fullName>
            </value>
            <value>
                <fullName>Quality and Compliance-Driving</fullName>
            </value>
            <value>
                <fullName>Request-Driving</fullName>
            </value>
            <value>
                <fullName>Traffic Violation-Driving</fullName>
            </value>
            <value>
                <fullName>Services-Limo</fullName>
            </value>
            <value>
                <fullName>Traffic Violation-Limo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>