unpackaged/main/default/objects/Case/fields/Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Record_Types__c</fullName>
    <label>Record Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School Transport</fullName>
            </value>
            <value>
                <fullName>Ministry of Education</fullName>
            </value>
            <value>
                <fullName>Limousine Services</fullName>
            </value>
            <value>
                <fullName>Driving School</fullName>
            </value>
            <value>
                <fullName>Vehicle Inspection Services</fullName>
            </value>
            <value>
                <fullName>Auto Repair Services - B2C</fullName>
            </value>
            <value>
                <fullName>Auto Repair Services - B2B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>