unpackaged/main/default/objects/Case/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <description>Insurnace</description>
    <formula>Insurance__r.Relation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relation</label>
    <type>Text</type>
</CustomField>