unpackaged/main/default/objects/Case/fields/Repair_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Repair_Start_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Repair Start Time</label>
    <type>DateTime</type>
</CustomField>