unpackaged/main/default/objects/Case/fields/Repair_Technician_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Repair_Technician_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Repair Technician Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>