unpackaged/main/default/objects/Case/fields/Report_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Report_Purpose__c</fullName>
    <formula>IF( CreatedBy.Id = $User.Id , &quot;Yes&quot; , &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Purpose</label>
    <type>Text</type>
</CustomField>