unpackaged/main/default/objects/Case/fields/Request_Category__c.field-meta.xml
<CustomField>
    <fullName>Request_Category__c</fullName>
    <label>Request Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passenger Transportation</fullName>
            </value>
            <value>
                <fullName>School Transportation</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Maintenance and Technical services</fullName>
            </value>
            <value>
                <fullName>General inquiry</fullName>
            </value>
            <value>
                <fullName>ETDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>