unpackaged/main/default/objects/Case/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <label>Requestor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Public Schools</fullName>
            </value>
            <value>
                <fullName>Staffs</fullName>
            </value>
            <value>
                <fullName>Ministries</fullName>
            </value>
            <value>
                <fullName>Private Schools</fullName>
            </value>
            <value>
                <fullName>ET staff</fullName>
            </value>
            <value>
                <fullName>Municipality/RTA/DoT</fullName>
            </value>
            <value>
                <fullName>Police</fullName>
            </value>
            <value>
                <fullName>General Public</fullName>
            </value>
            <value>
                <fullName>Private School Parents</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>AD Police</fullName>
            </value>
            <value>
                <fullName>ADFCA</fullName>
            </value>
            <value>
                <fullName>FUJAIRAH Police</fullName>
            </value>
            <value>
                <fullName>Hotels/Event team</fullName>
            </value>
            <value>
                <fullName>Dubai Police</fullName>
            </value>
            <value>
                <fullName>Sharjah Police</fullName>
            </value>
            <value>
                <fullName>Ajman Police</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Technical Service</fullName>
            </value>
            <value>
                <fullName>MUSADA</fullName>
            </value>
            <value>
                <fullName>Dry Wash Unite</fullName>
            </value>
            <value>
                <fullName>Watania</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>