unpackaged/main/default/objects/Case/fields/Rimming_Env_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Rimming_Env_End_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rimming &amp; Env End Time</label>
    <type>DateTime</type>
</CustomField>