unpackaged/main/default/objects/Case/fields/Rimming_Env_Technician_Reject_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Rimming_Env_Technician_Reject_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rimming &amp; Env Technician Reject Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>