unpackaged/main/default/objects/Case/fields/Rimming_technician__c.field-meta.xml
<CustomField>
    <fullName>Rimming_technician__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rimming technician</label>
    <length>250</length>
    <type>Text</type>
</CustomField>