unpackaged/main/default/objects/Case/fields/RTD__c.field-meta.xml
<CustomField>
    <fullName>RTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>