unpackaged/main/default/objects/Case/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <formula>/*ETST_Student__r.ETST_Student_School__c*/
&quot;Diyar Private Academy&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Name</label>
    <type>Text</type>
</CustomField>