unpackaged/main/default/objects/Case/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <formula>TEXT(Account.ETST_Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Type</label>
    <type>Text</type>
</CustomField>