unpackaged/main/default/objects/Case/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sector</label>
    <length>50</length>
    <type>Text</type>
</CustomField>