unpackaged/main/default/objects/Case/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long Journey Time For Students</fullName>
            </value>
            <value>
                <fullName>Regularity Of Bus Schedules</fullName>
            </value>
            <value>
                <fullName>Driving Recklessly</fullName>
            </value>
            <value>
                <fullName>Functions Of Supervision Performed Improperly</fullName>
            </value>
            <value>
                <fullName>Quality Of Services</fullName>
            </value>
            <value>
                <fullName>Appearance And Cleanliness Of The Bus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>