unpackaged/main/default/objects/Case/fields/Service_Details__c.field-meta.xml
<CustomField>
    <fullName>Service_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>