unpackaged/main/default/objects/Case/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Session Date</label>
    <type>DateTime</type>
</CustomField>