unpackaged/main/default/objects/Case/fields/SIS_Number__c.field-meta.xml
<CustomField>
    <fullName>SIS_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SIS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>