unpackaged/main/default/objects/Case/fields/SiteVisitTimestamp__c.field-meta.xml
<CustomField>
    <fullName>SiteVisitTimestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SiteVisit Timestamp</label>
    <type>DateTime</type>
</CustomField>