unpackaged/main/default/objects/Case/fields/Skiving_Start_time__c.field-meta.xml
<CustomField>
    <fullName>Skiving_Start_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Skiving Start time</label>
    <type>DateTime</type>
</CustomField>