unpackaged/main/default/objects/Case/fields/Skiving_Technician__c.field-meta.xml
<CustomField>
    <fullName>Skiving_Technician__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Skiving Technician</label>
    <length>250</length>
    <type>Text</type>
</CustomField>