unpackaged/main/default/objects/Case/fields/Solution_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Solution_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Solution Completed Date</label>
    <type>DateTime</type>
</CustomField>