unpackaged/main/default/objects/Case/fields/Status_Category__c.field-meta.xml
<CustomField>
    <fullName>Status_Category__c</fullName>
    <label>Next Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending with Department Of School Activities</fullName>
            </value>
            <value>
                <fullName>Pending with School Transportation Manager</fullName>
            </value>
            <value>
                <fullName>Pending with Department Of School Services</fullName>
            </value>
            <value>
                <fullName>Pending with Personnel Management</fullName>
            </value>
            <value>
                <fullName>Pending with Special Education</fullName>
            </value>
            <value>
                <fullName>Pending with Statistics Coordinator</fullName>
            </value>
            <value>
                <fullName>Pending with Branch Manager</fullName>
            </value>
            <value>
                <fullName>Pending with Routes Efficient and Design Director</fullName>
            </value>
            <value>
                <fullName>Pending with First Transport Specialist</fullName>
            </value>
            <value>
                <fullName>Pending with Head of Safety Unit</fullName>
            </value>
            <value>
                <fullName>Pending with Students Safety Specialist</fullName>
            </value>
            <value>
                <fullName>Pending with Safety and Health Specialist</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending with Main School</fullName>
            </value>
            <value>
                <fullName>Pending Hemam for Inclusive Education services</fullName>
            </value>
            <value>
                <fullName>Pending with Inclusive Education Department in ESE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>