unpackaged/main/default/objects/Case/fields/Strategic_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_Manager__c</fullName>
    <formula>if(Account_Site__r.Operation_Manager__c !=null, Account_Site__r.Operation_Manager__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operation Manager</label>
    <type>Text</type>
</CustomField>