unpackaged/main/default/objects/Case/fields/Student_Division_AR__c.field-meta.xml
<CustomField>
    <fullName>Student_Division_AR__c</fullName>
    <label>Student Division AR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>١</fullName>
            </value>
            <value>
                <fullName>٢</fullName>
            </value>
            <value>
                <fullName>٣</fullName>
            </value>
            <value>
                <fullName>٤</fullName>
            </value>
            <value>
                <fullName>٥</fullName>
            </value>
            <value>
                <fullName>٦</fullName>
            </value>
            <value>
                <fullName>٧</fullName>
            </value>
            <value>
                <fullName>٨</fullName>
            </value>
            <value>
                <fullName>٩</fullName>
            </value>
            <value>
                <fullName>١٠</fullName>
            </value>
            <value>
                <fullName>١١</fullName>
            </value>
            <value>
                <fullName>١٢</fullName>
            </value>
            <value>
                <fullName>كلغ ١</fullName>
            </value>
            <value>
                <fullName>كلغ ٢</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>