unpackaged/main/default/objects/Case/fields/Students__c.field-meta.xml
<CustomField>
    <fullName>Students__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Students</label>
    <type>Checkbox</type>
</CustomField>